# EVF9

./: .gitmodules  CMakeLists.txt  README.md  build.sh  build_termux.sh  clean.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
addons/: evf9_jobs.inc  evf9_police.inc  evf9_racing.inc
docs/: addons.md  api_reference.md  events.md  extensions.md  faq.md  getting_started.md  installation.md  migration.md  modules.md  performance.md  troubleshooting.md
examples/: addon_example.pwn  basic_vehicle.pwn  damage_system.pwn  fleet_system.pwn  fuel_system.pwn  insurance_system.pwn  json_export.pwn  mysql_persistence.pwn  ownership_system.pwn  sqlite_persistence.pwn  tracking_system.pwn
pawno/include/EVF9/: evf9_natives.inc
pawno/include/EVF9/extensions/: evf9_mapandreas.inc  evf9_sqlite.inc  evf9_streamer.inc
pawno/include/EVF9/modules/: evf9_damage.inc  evf9_fleet.inc  evf9_insurance.inc  evf9_ownership.inc
qawno/include/: EVF9.inc
qawno/include/EVF9/: evf9_config.inc  evf9_events.inc  evf9_flags.inc  evf9_natives.inc
qawno/include/EVF9/extensions/: evf9_colandreas.inc  evf9_discord.inc  evf9_fcnpc.inc  evf9_http.inc  evf9_json.inc  evf9_mysql.inc  evf9_yini.inc
qawno/include/EVF9/modules/: evf9_fuel.inc  evf9_keys.inc  evf9_tracking.inc
sdk/omp/include/: anim.hpp
src/: amx_helpers.h  event_dispatcher.cpp  event_dispatcher.h  iterator.cpp  iterator.h  main.cpp  module_registry.cpp  module_registry.h  persistence_state.cpp  persistence_state.h  pool.cpp  pool.h  uid.cpp  uid.h  vehicle_system.cpp  vehicle_system.h
src/natives/: api_natives.cpp  core_natives.cpp  entity_natives.cpp  flags_natives.cpp  pool_natives.cpp
src/natives/modules/: damage.cpp  fleet.cpp  fuel.cpp  insurance.cpp  keys.cpp  ownership.cpp  register.cpp  tracking.cpp
tests/: test_core.pwn  test_events.pwn  test_extensions.pwn  test_modules.pwn  test_performance.pwn
